# advent-of-code-2023

./: .gitignore  cargo.toml
day01/: Cargo.toml
day01/src/: main.rs
day02/: Cargo.toml
day02/src/: main.rs
day03/: Cargo.toml
day03/src/: main.rs
day04/: Cargo.toml
day05/: Cargo.toml
day05/src/: main.rs
day06/: Cargo.toml
day07/: Cargo.toml
day07/src/: main.rs
day08/: Cargo.toml
day08/src/: main.rs
day09/: Cargo.toml
day09/src/: main.rs
day1/: Cargo.toml
day1/src/: main.rs
day10/: Cargo.toml
day10/src/: main.rs  map.rs
day11/: Cargo.toml
day11/src/: main.rs  universe.rs
day12/: Cargo.toml
day12/src/: input.rs  main.rs
day13/: Cargo.toml
day13/src/: main.rs  pattern.rs
day14/: Cargo.toml
day14/src/: main.rs  node.rs  platform.rs
day15/: Cargo.toml
day15/src/: main.rs
day16/: Cargo.toml
day16/src/: main.rs
day2/: Cargo.toml
day2/src/: main.rs
day3/: Cargo.toml
day3/src/: main.rs
day4/: Cargo.toml
day4/src/: card.rs  main.rs
day5/: Cargo.toml
day5/src/: main.rs
day6/: Cargo.toml
day6/src/: main.rs
day7/: Cargo.toml
day7/src/: main.rs
day8/: Cargo.toml
day8/src/: main.rs
day9/: Cargo.toml
macros/: Cargo.toml
macros/src/: lib.rs
map2d/: Cargo.toml
map2d/src/: lib.rs
