[package]
name = "day16"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
macros = { version = "0.1.0", path = "../macros" }
map2d = { version = "0.1.0", path = "../map2d" }
